--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- TODO: Banner Image here-->
   
       <img id="banner"
-        src="./assets/images/.png"
+        src="./assets/images/logo1.png"
         alt="banner logo">
  
     <main>
