updated index page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
   <br>
   <br>
   <br>
+  
    <img id="banner"
    src="./assets/images/logo1.png"
    alt="banner logo">
-    
+    <br>
+    <br>
+    <br>
+    <hr>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
   <nav>
@@ -34,11 +38,18 @@
           </li>
     </ul>
   </nav>
+  <hr>
    
  
     <main>
-       <H2>Like all custom works this takes time to build.  Website is a personal work in progress.  
+      <br>
+      <br>
+      <br>
+      <br>
+      <div>
+       <H2>Like all custom works this will take time to build.  Website is a personal work in progress.  
         Iam learning to code and building this webiste by hand from the ground up. </H2>
+        </div>
 
       
     <img src="./assets/images/logo2.png"
