--- a/gallery.html
+++ b/gallery.html
@@ -47,8 +47,8 @@
       <br>
       <br>
       <div>
-       <H2>Like all custom works this will take time to build.  Website is a personal work in progress.  
-        Iam learning to code and building this webiste by hand from the ground up. </H2>
+       <H2>Like all custom works, this website will take time to build. This website is a personal work in progress.  
+        I am learning to code and am building this webiste by hand from the ground up. </H2>
         </div>
 
       
