--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br>
       <div>
        <H2>Like all custom works, this website will take time to build. This website is a personal work in progress.  
-        I am learning to code and am building this webiste by hand from the ground up. </H2>
+        I am learning to code and am building this website by hand from the ground up. </H2>
         </div>
 
       
