started coding lings for img

--- a/gallery.html
+++ b/gallery.html
@@ -51,9 +51,31 @@
         I am learning to code and am building this website by hand from the ground up. </H2>
         </div>
 
-      
-    <img src="./assets/images/logo2.png"
-      alt="logo2">
+      <div>
+    <img src="./assets/images/before-wall.png"
+      alt="before-wall">
+      Before I built a wall for extra storage space and a built in bench sitting with extra storage and hidden outlets.
+      </div>
+      <div>
+        <img src="./assets/images/wall-bench4.png"
+        alt="after-wall">
+        After I did all that work.
+      </div>
+      <div>
+        <img src="./assets/images/mailbox-before.png"
+        alt="mailbox-before">
+        Mailbox before I got to work.
+      </div>
+      <div>
+        <img src="./assets/images/mailbox-after.png"
+        alt="mailbox-after">
+        Mailbox after during the daytime.
+      </div>
+      <div>
+        <img src="./assets/images/mailbox-night.png"
+        alt="mailbod-night">
+        This mail mail box lights up at night via solar powered lights.
+      </div>
     </main>
  
 </body>
