changed img descriptions to h2 tags

--- a/gallery.html
+++ b/gallery.html
@@ -54,27 +54,27 @@
       <div>
     <img src="./assets/images/before-wall.png"
       alt="before-wall">
-      Before I built a wall for extra storage space and a built in bench sitting with extra storage and hidden outlets.
+      <h2>Before I built a wall for extra storage space and a built in bench sitting with extra storage and hidden outlets.</h2>
       </div>
       <div>
         <img src="./assets/images/wall-bench4.png"
         alt="after-wall">
-        After I did all that work.
+       <h2> Wall and storage bench built, just a few more touch ups.</h2>
       </div>
       <div>
         <img src="./assets/images/mailbox-before.png"
         alt="mailbox-before">
-        Mailbox before I got to work.
+        <h2>Mailbox paint pilling.</h2>
       </div>
       <div>
         <img src="./assets/images/mailbox-after.png"
         alt="mailbox-after">
-        Mailbox after during the daytime.
+        <h2>Mailbox after during the daytime.</h2>
       </div>
       <div>
         <img src="./assets/images/mailbox-night.png"
         alt="mailbod-night">
-        This mail mail box lights up at night via solar powered lights.
+        <h2>This mail mail box lights up at night via hidden solar powered lights.</h2>
       </div>
     </main>
  
