upated conact page, made phone and email clickable

--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
         <br>
         <br>
         <p>
-            <strong><i class="fa fa-phone"></i> Phone:</strong> (910) 463-8656
-        </p>
+            <strong><i class="fa fa-phone"></i> Phone:</strong> <a href="tel:9104638656">(910) 463-8656</a>
+          </p>
         <p>
 <!--           i class code below is for adding font awesome icons -->
           <strong><i class="fa fa-address-card"></i> Address:</strong> 
@@ -61,7 +61,7 @@
            
         </p>
         <p>
-          <strong><i class="fa fa-envelope"></i> Email:</strong> gfoster@fostercwc.com
+          <strong><i class="fa fa-envelope"></i> Email:</strong><a href="mailto:gfoster@fostercwc.com"> gfoster@fostercwc.com</a>
         </p>
     </main>
     <br>
