--- a/gallery.html
+++ b/gallery.html
@@ -52,19 +52,21 @@
         </div>
 
       <div>
-    <img src="./assets/images/before-wall.png"
+    <img src="./assets/images/wall-bench-before.jpeg"
       alt="before-wall">
-      <h2>Before I built a wall for extra storage space and a built in bench sitting with extra storage and hidden outlets.</h2>
+      <h2>Before: Although, I did install the crown molding here previously.</h2>
       </div>
       <div>
-        <img src="./assets/images/wall-bench4.png"
+        <img src="./assets/images/wall-bench1-1.jpeg"
         alt="after-wall">
-       <h2> Wall and storage bench built, just a few more touch ups.</h2>
+       <h2> After: Just a few more touch ups. Here I added/extended the wall(to create hidden storage), made a custom built in bench with 
+        storage and hidden outlets. I also did the wainscotting and painting.
+       </h2>
       </div>
       <div>
-        <img src="./assets/images/mailbox-before.png"
-        alt="mailbox-before">
-        <h2>Mailbox paint pilling.</h2>
+        <img src="./assets/images/wall-bench5.jpeg"
+        alt="After-wall2">
+        <h2>Another view</h2>
       </div>
       <div>
         <img src="./assets/images/mailbox-after.png"
