fixed a img link

--- a/gallery.html
+++ b/gallery.html
@@ -51,12 +51,12 @@
         I am learning to code and am building this website by hand from the ground up. </H2>
         </div>
 
-      <div>
+   <div>
     <img src="./assets/images/wall-bench-before.jpeg"
       alt="before-wall">
       <h2>Before: Although, I did install the crown molding here previously.</h2>
-      </div>
-      <div>
+   </div>
+   <div>
         <img src="./assets/images/wall-bench1.jpeg"
         alt="after-wall">
        <h2> After: Just a few more touch ups. Here I added/extended the wall(to create hidden storage), made a custom built in bench with 
@@ -69,12 +69,12 @@
         <h2>Another view</h2>
       </div>
       <div>
-        <img src="./assets/images/mailbox-after.png"
+        <img src="./assets/images/mailbox-after.jpeg"
         alt="mailbox-after">
         <h2>Mailbox after during the daytime.</h2>
       </div>
       <div>
-        <img src="./assets/images/mailbox-night.png"
+        <img src="./assets/images/mailbox-night.jpeg"
         alt="mailbod-night">
         <h2>This mail mail box lights up at night via hidden solar powered lights.</h2>
       </div>
