added a new photo and updated gallery

--- a/gallery.html
+++ b/gallery.html
@@ -78,6 +78,46 @@
         alt="mailbod-night">
         <h2>This mail mail box lights up at night via hidden solar powered lights.</h2>
       </div>
+      <div>
+        <img src="./assets/images/ashville.jpeg"
+        alt="Ashville skyline light box">
+      </div>
+      <div>
+        <img src="./assets/images/walnut1.jpeg"
+        alt="walnut board ">
+      </div>
+      <div>
+        <img src="./assets/images/walnut2.jpeg"
+        alt="walnut board open">
+      </div>
+      <div>
+        <img src="./assets/images/steps-before.jpeg"
+        alt="step-before">
+      </div>
+      <div>
+        <img src="./assets/images/steps-after.jpeg"
+        alt="step-after">
+      </div>
+      <div>
+        <img src="./assets/images/planter3.jpeg"
+        alt="planter">
+      </div>
+      <div>
+        <img src="./assets/images/shutters1.jpeg"
+        alt="shutters1">
+      </div>
+      <div>
+        <img src="./assets/images/spice-closed1.jpeg"
+        alt="Spice-Rack">
+      </div>
+      <div>
+        <img src="./assets/images/spice-open.jpeg"
+        alt="spice-rack-open">
+      </div>
+      <div>
+        <img src="./assets/images/organizer.jpeg"
+        alt="utensil organizer">
+      </div>
     </main>
  
 </body>
