updated galler and added a pic

--- a/gallery.html
+++ b/gallery.html
@@ -118,8 +118,16 @@
         <img src="./assets/images/organizer.jpeg"
         alt="utensil organizer">
       </div>
+      <div>
+        <img src="./assets/images/frontdoor1.jpeg"
+        alt="front-door-before">
+      </div>
+      <div>
+        <img src="./assets/images/front-door.jpeg"
+        alt="front-door-after">
+      </div>
     </main>
- 
+
 </body>
 
 <footer>Foster Custom Woodworker & Carpentry LLC</footer>
