--- a/gallery.html
+++ b/gallery.html
@@ -126,6 +126,10 @@
         <img src="./assets/images/front-door.jpeg"
         alt="front-door-after">
       </div>
+      <div>
+        <img src="./assets/images/grape3.jpeg"
+        alt="grape-vine">
+      </div>
     </main>
 
 </body>
