added new pictures to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -130,6 +130,30 @@
         <img src="./assets/images/grape3.jpeg"
         alt="grape-vine">
       </div>
+      <div>
+        <img src="./assets/images/shelf-closed.jpeg"
+        alt="closed shelf">
+      </div>
+      <div>
+        <img src="./assets/images/shelf-open.jpeg"
+        alt="open shelf">
+      </div>
+        <div>
+          <img src="./assets/images/med-cab-before.jpeg"
+          alt="med cab">
+        </div>
+        <div>
+          <img src="./assets/images/med-cab-after.jpeg"
+          alt="med cab">
+        </div>
+        <div>
+          <img src="./assets/images/wood-floor-before.jpeg"
+          alt="med cab">
+        </div>
+        <div>
+          <img src="./assets/images/wood-floor-after.jpeg"
+          alt="med cab">
+        </div>
     </main>
 
 </body>
